// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getStructure returns only the first levels if a level is passed 1`] = `
Object {
  "children": Array [
    Object {
      "icon": undefined,
      "id": "01f23c2a-b681-43db-9d27-5d8d59f62aed",
      "parent": "09438926-b170-4005-a6e8-5dd8fba83cde",
      "title": undefined,
    },
    Object {
      "icon": undefined,
      "id": "e194f80b-7312-43a2-995e-060f64631782",
      "parent": "09438926-b170-4005-a6e8-5dd8fba83cde",
      "title": undefined,
    },
  ],
  "icon": undefined,
  "id": "09438926-b170-4005-a6e8-5dd8fba83cde",
  "parent": undefined,
  "title": "Foo bar",
}
`;

exports[`getStructure returns the whole tree by default 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "id": "23e20d5b-ad8e-41be-9891-5ca7b12675c4",
          "parent": "01f23c2a-b681-43db-9d27-5d8d59f62aed",
          "type": "foo",
        },
      ],
      "icon": undefined,
      "id": "01f23c2a-b681-43db-9d27-5d8d59f62aed",
      "parent": "09438926-b170-4005-a6e8-5dd8fba83cde",
      "title": undefined,
    },
    Object {
      "children": Array [
        Object {
          "id": "84fdc1a1-e3bf-4a87-8360-0c3b7beec179",
          "parent": "e194f80b-7312-43a2-995e-060f64631782",
          "type": "foo",
        },
      ],
      "icon": undefined,
      "id": "e194f80b-7312-43a2-995e-060f64631782",
      "parent": "09438926-b170-4005-a6e8-5dd8fba83cde",
      "title": undefined,
    },
  ],
  "icon": undefined,
  "id": "09438926-b170-4005-a6e8-5dd8fba83cde",
  "parent": undefined,
  "title": "Foo bar",
}
`;
